I'm meant fixed, the textarea should be visible even if you scroll

--- a/the-shadow/css/style.css
+++ b/the-shadow/css/style.css
@@ -311,7 +311,7 @@ td { vertical-align: top; }
 */
 
 .delivery {
-  position: absolute;
+  position: fixed;
   width: 75%;
   bottom: 20px;
   left: 20px;
